--- a/src/geoalert_master_src/main_dialog.ui
+++ b/src/geoalert_master_src/main_dialog.ui
@@ -56,7 +56,7 @@
     </size>
    </property>
    <property name="currentIndex">
-    <number>0</number>
+    <number>1</number>
    </property>
    <widget class="QWidget" name="processingsTab">
     <attribute name="title">
@@ -544,7 +544,7 @@
        <rect>
         <x>11</x>
         <y>71</y>
-        <width>186</width>
+        <width>261</width>
         <height>16</height>
        </rect>
       </property>
@@ -557,7 +557,7 @@
        <rect>
         <x>371</x>
         <y>71</y>
-        <width>77</width>
+        <width>111</width>
         <height>16</height>
        </rect>
       </property>
@@ -658,13 +658,13 @@
        <string/>
       </property>
      </widget>
-     <widget class="QWidget" name="layoutWidget">
+     <widget class="QWidget" name="">
       <property name="geometry">
        <rect>
-        <x>14</x>
-        <y>1</y>
-        <width>561</width>
-        <height>41</height>
+        <x>10</x>
+        <y>20</y>
+        <width>571</width>
+        <height>32</height>
        </rect>
       </property>
       <layout class="QHBoxLayout" name="horizontalLayout">
@@ -676,15 +676,30 @@
         </widget>
        </item>
        <item>
-        <widget class="QgsFileWidget" name="outputDirectory">
-         <property name="dialogTitle">
-          <string>Select Working Directory</string>
+        <widget class="QLineEdit" name="outputDirectory"/>
+       </item>
+       <item>
+        <widget class="QPushButton" name="selectOutputDirectory">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
          </property>
-         <property name="filter">
-          <string/>
+         <property name="minimumSize">
+          <size>
+           <width>41</width>
+           <height>30</height>
+          </size>
          </property>
-         <property name="storageMode">
-          <enum>QgsFileWidget::GetDirectory</enum>
+         <property name="maximumSize">
+          <size>
+           <width>41</width>
+           <height>30</height>
+          </size>
+         </property>
+         <property name="text">
+          <string>...</string>
          </property>
         </widget>
        </item>
@@ -976,11 +991,6 @@
   </widget>
  </widget>
  <customwidgets>
-  <customwidget>
-   <class>QgsFileWidget</class>
-   <extends>QWidget</extends>
-   <header>qgsfilewidget.h</header>
-  </customwidget>
   <customwidget>
    <class>QgsMapLayerComboBox</class>
    <extends>QComboBox</extends>
