--- a/src/geoalert_master_src/main_dialog.ui
+++ b/src/geoalert_master_src/main_dialog.ui
@@ -56,7 +56,7 @@
     </size>
    </property>
    <property name="currentIndex">
-    <number>1</number>
+    <number>0</number>
    </property>
    <widget class="QWidget" name="processingsTab">
     <attribute name="title">
@@ -301,12 +301,12 @@
                  </item>
                  <item>
                   <property name="text">
-                   <string>Custom (in settings)</string>
+                   <string>Open new .tif</string>
                   </property>
                  </item>
                  <item>
                   <property name="text">
-                   <string>Open new .tif</string>
+                   <string>Custom (in settings)</string>
                   </property>
                  </item>
                 </widget>
@@ -422,8 +422,8 @@
          <rect>
           <x>0</x>
           <y>0</y>
-          <width>761</width>
-          <height>31</height>
+          <width>762</width>
+          <height>32</height>
          </rect>
         </property>
         <layout class="QHBoxLayout" name="horizontalLayout_6">
@@ -431,25 +431,25 @@
           <number>600</number>
          </property>
          <item>
-          <widget class="QPushButton" name="deleteProcessings">
-           <property name="styleSheet">
-            <string notr="true"/>
-           </property>
-           <property name="text">
-            <string>Delete</string>
-           </property>
-          </widget>
-         </item>
-         <item>
           <widget class="QPushButton" name="logoutButton">
            <property name="visible">
-            <bool>false</bool>
+            <bool>true</bool>
            </property>
            <property name="styleSheet">
             <string notr="true"/>
            </property>
            <property name="text">
             <string>Log out</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QPushButton" name="deleteProcessings">
+           <property name="styleSheet">
+            <string notr="true"/>
+           </property>
+           <property name="text">
+            <string>Delete</string>
            </property>
           </widget>
          </item>
@@ -992,7 +992,7 @@
    </property>
    <layout class="QFormLayout" name="formLayout_6"/>
   </widget>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>0</x>
