--- a/src/geoalert_master_src/login_dialog.ui
+++ b/src/geoalert_master_src/login_dialog.ui
@@ -165,7 +165,7 @@
        </widget>
       </item>
       <item row="2" column="0">
-       <widget class="QLabel" name="passwordLabel_2">
+       <widget class="QLabel" name="serverLabel">
         <property name="text">
          <string>Server</string>
         </property>
