--- a/src/geoalert_master_src/main_dialog.ui
+++ b/src/geoalert_master_src/main_dialog.ui
@@ -56,7 +56,7 @@
     </size>
    </property>
    <property name="currentIndex">
-    <number>0</number>
+    <number>1</number>
    </property>
    <widget class="QWidget" name="processingsTab">
     <attribute name="title">
@@ -433,7 +433,7 @@
          <item>
           <widget class="QPushButton" name="logoutButton">
            <property name="visible">
-            <bool>true</bool>
+            <bool>false</bool>
            </property>
            <property name="styleSheet">
             <string notr="true"/>
@@ -872,6 +872,18 @@
        </sizepolicy>
       </property>
       <property name="mouseTracking">
+       <bool>false</bool>
+      </property>
+      <property name="autoScroll">
+       <bool>false</bool>
+      </property>
+      <property name="selectionMode">
+       <enum>QAbstractItemView::SingleSelection</enum>
+      </property>
+      <property name="sortingEnabled">
+       <bool>true</bool>
+      </property>
+      <property name="cornerButtonEnabled">
        <bool>false</bool>
       </property>
      </widget>
