--- a/src/geoalert_master_src/main_dialog.ui
+++ b/src/geoalert_master_src/main_dialog.ui
@@ -367,21 +367,12 @@
             </widget>
            </item>
            <item>
-            <widget class="QPushButton" name="loadProcessingResults">
-             <property name="sizePolicy">
-              <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-               <horstretch>0</horstretch>
-               <verstretch>0</verstretch>
-              </sizepolicy>
-             </property>
-             <property name="minimumSize">
-              <size>
-               <width>211</width>
-               <height>41</height>
-              </size>
+            <widget class="QPushButton" name="deleteProcessings">
+             <property name="styleSheet">
+              <string notr="true"/>
              </property>
              <property name="text">
-              <string>Load processing results</string>
+              <string>Delete processing</string>
              </property>
             </widget>
            </item>
@@ -417,43 +408,24 @@
          <height>0</height>
         </size>
        </property>
-       <widget class="QWidget" name="layoutWidget">
+       <widget class="QPushButton" name="logoutButton">
         <property name="geometry">
          <rect>
-          <x>0</x>
-          <y>0</y>
-          <width>762</width>
-          <height>32</height>
+          <x>1</x>
+          <y>1</y>
+          <width>80</width>
+          <height>30</height>
          </rect>
         </property>
-        <layout class="QHBoxLayout" name="horizontalLayout_6">
-         <property name="spacing">
-          <number>600</number>
-         </property>
-         <item>
-          <widget class="QPushButton" name="logoutButton">
-           <property name="visible">
-            <bool>true</bool>
-           </property>
-           <property name="styleSheet">
-            <string notr="true"/>
-           </property>
-           <property name="text">
-            <string>Log out</string>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QPushButton" name="deleteProcessings">
-           <property name="styleSheet">
-            <string notr="true"/>
-           </property>
-           <property name="text">
-            <string>Delete</string>
-           </property>
-          </widget>
-         </item>
-        </layout>
+        <property name="visible">
+         <bool>true</bool>
+        </property>
+        <property name="styleSheet">
+         <string notr="true"/>
+        </property>
+        <property name="text">
+         <string>Log out</string>
+        </property>
        </widget>
       </widget>
      </item>
